--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "quickselect": "^3.0.0",
     "supercluster": "^8.0.1",
     "tinyqueue": "^3.0.0",
-    "vt-pbf": "^3.1.3"
+    "vt-pbf": "^3.1.3",
+    "d3-scale": "^4.0.0"
   },
   "devDependencies": {
     "@mapbox/mapbox-gl-rtl-text": "^0.3.0",
@@ -130,7 +131,7 @@
     "stylelint-config-standard": "^37.0.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "typedoc": "^0.27.9",
+    "typedoc": "^0.28.0",
     "typedoc-plugin-markdown": "^4.4.2",
     "typedoc-plugin-missing-exports": "^3.1.0",
     "typescript": "^5.8.2",
